[taotao-cloud-project-1433] update[ version ]